# MIPTpay

./: Dockerfile  Project_UML1.mdj  Project_UML2.mdj  Project_description.docx  README.md  accesstools.py  account.py  accountfactory.py  admin.py  bank.py  client.py  clientbuilder.py  crosspayment.py  crosspaymentsystem.py  dataoperator.py  main.py  old_main.py  person.py  plan.py  planfactory.py  pyproject.toml  requirements.txt  setup.py  timekeeper.py  transaction.py  user.py  user_interface.py
docs/: README.md
docs/How2/: Linux_macOS.md  Windows.md
docs/python_course/: README.md
miptpay/tests/: sampledata.py
src/: __init__.py
src/account/: account.py  accountfactory.py
src/admin/: admin.py
src/banking/: bank.py  client.py  clientbuilder.py  crosspayment.py  crosspaymentsystem.py
src/deprecated/: user_interface.py
src/interface/: user_interface.py
src/messenger/: conversation.py  message.py  messagebuilder.py
src/miptpaydj/: manage.py
src/miptpaydj/mainapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/miptpaydj/mainapp/migrations/: 0001_initial.py
src/miptpaydj/mainapp/templates/: accounts.html  banks.html  chats.html  clients.html  create_plan.html  fixtures.json  get_from_account.html  home.html  index.html  (+11 more)
src/miptpaydj/miptpaydj/: settings.py  urls.py
src/operators/: adapters.py  adaptors.py  dataoperator.py  timekeeper.py
src/plan/: plan.py  plancategory.py  planfactory.py  planproperty.py
src/tools/: accesstools.py
src/transaction/: transaction.py
src/users/: person.py
tests/: old_main.py  sampledata.py
(+6 files in other folders)
